# varlink-cpp

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  org.example.more.varlink  test.cpp  varlink-wrapper.cmake
.github/workflows/: clang-format.yml  cmake.yml
cmake/: FindOrFetch.cmake  VarlinkWrapper.cmake
docs/: planning.txt
example/: CMakeLists.txt  more.cpp  org.example.more.varlink
include/: varlink.hpp
include/varlink/: async_client.hpp  async_server.hpp  client.hpp  common.hpp  connection.hpp  interface.hpp  json_connection.hpp  message.hpp  peg.hpp  server.hpp  server_session.hpp  service.hpp  socket.hpp  threaded_server.hpp  transport.hpp  uri.hpp  varlink.hpp
include/varlink/detail/: config.hpp  manual_strand.hpp  member.hpp  message.hpp  movable_function.hpp  nl_json.hpp  org.varlink.service.varlink  peg.hpp  scanner.hpp  unique_function.hpp  utils.hpp  varlink_error.hpp
lib/: CMakeLists.txt  client.cpp  connection.cpp  interface.cpp  interface.hpp  server.cpp  service.cpp
source/: interface.cpp  member.cpp  service.cpp
test/: CMakeLists.txt  cert_client.cpp  cert_server.cpp  client.cpp  fake_socket.hpp  interface.cpp  message.cpp  self_cert.sh  self_errors.cpp  self_tcp.cpp  self_tcp.hpp  self_test_async.cpp  self_test_impl.cpp  self_test_threaded.cpp  self_unix.cpp  self_unix.hpp  server.cpp  service.cpp  socket.cpp  test_env.hpp  test_main.cpp  transport.cpp  unit_client.cpp  unit_interface.cpp  unit_message.cpp  unit_server.cpp  unit_server_session.cpp  unit_service.cpp  unit_socket.cpp  unit_transport.cpp  unit_uri.cpp  unix-socket.cpp  uri.cpp
tests/: CMakeLists.txt  cert_client.cpp  cert_client_async.cpp  cert_server.cpp  fake_socket.hpp  self_cert.sh  self_errors.cpp  self_tcp.hpp  self_test_async.cpp  self_test_threaded.cpp  self_unix.hpp  test_env.hpp  test_env_wrapper.h  test_main.cpp  unit_client.cpp  unit_interface.cpp  unit_message.cpp  unit_server_session.cpp  unit_service.cpp  unit_transport.cpp  unit_uri.cpp
